added sequence manager file, need to add service next

--- a/src/triton_controls/CMakeLists.txt
+++ b/src/triton_controls/CMakeLists.txt
@@ -52,10 +52,12 @@ install(TARGETS thrust_allocator
 
 add_library(triton_controls SHARED
   src/thrust_allocator.cpp
+#  src/waypoint_sequence_manager.cpp
   src/waypoint_marker.cpp
 )
 
 rclcpp_components_register_nodes(triton_controls "triton_controls::ThrustAllocator")
+#rclcpp_components_register_nodes(triton_controls "triton_controls::WaypointSequenceManager")
 rclcpp_components_register_nodes(triton_controls "triton_controls::WaypointMarker")
 
 target_compile_definitions(triton_controls
