--- a/src/triton_interfaces/CMakeLists.txt
+++ b/src/triton_interfaces/CMakeLists.txt
@@ -24,8 +24,10 @@ find_package(ament_cmake REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
+  "srv/MarkWaypoint.srv"
   "action/RunPipeline.action"
   "srv/ConfigurePipeline.srv"
   "msg/PipelineType.msg"
