--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build_and_test:
     runs-on: ubuntu-20.04
     steps:
 
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup ROS2 distro and system deps
-        uses: ros-tooling/setup-ros@0.0.26
+        uses: ros-tooling/setup-ros@v0.2
         with: 
           required-ros-distributions: foxy
 
