most stuff is in place according to issue #97

--- a/src/triton_interfaces/CMakeLists.txt
+++ b/src/triton_interfaces/CMakeLists.txt
@@ -27,6 +27,7 @@ find_package(sensor_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
+  "msg/Success.msg"
   "srv/MarkWaypoint.srv"
   "action/RunPipeline.action"
   "srv/ConfigurePipeline.srv"
