added inaccurate pose estimation

--- a/src/triton_interfaces/CMakeLists.txt
+++ b/src/triton_interfaces/CMakeLists.txt
@@ -24,6 +24,7 @@ find_package(ament_cmake REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
   "action/RunPipeline.action"
@@ -32,6 +33,8 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/PipelineFeedback.msg"
   "msg/DetectionBox.msg"
   "msg/DetectionBoxArray.msg"
+  "msg/Point.msg"
+  "msg/PointArray.msg"
   "srv/ObjectDetection.srv"
   DEPENDENCIES builtin_interfaces std_msgs sensor_msgs
 )
