--- a/src/triton_object_recognition/package.xml
+++ b/src/triton_object_recognition/package.xml
@@ -12,6 +12,7 @@
   <depend>rclcpp</depend>
   <depend>rclcpp_components</depend>
   <depend>std_msgs</depend>
+  <depend>geometry_msgs</depend>
   <depend>triton_interfaces</depend>
   <depend>cv_bridge</depend>
   <depend>sensor_msgs</depend>
