--- a/src/triton_object_recognition/package.xml
+++ b/src/triton_object_recognition/package.xml
@@ -16,6 +16,7 @@
   <depend>cv_bridge</depend>
   <depend>sensor_msgs</depend>
   <depend>image_transport</depend>
+  <depend>realsense2_camera</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
