--- a/src/triton_object_recognition/config/custom_yolov4.yaml
+++ b/src/triton_object_recognition/config/custom_yolov4.yaml
@@ -1,8 +1,8 @@
 #There is an issue with ComposableNode where it doesn't understand the typical nested YAML structure
 #https://github.com/ros2/rclcpp/issues/715
 
-weights_filename: "yolov4-tiny.weights"
-cfg_filename: "yolov4-tiny.cfg"
+weights_filename: "yolov4-custom.weights"
+cfg_filename: "yolov4-custom.cfg"
 weights_url: "https://github.com/AlexeyAB/darknet/releases/download/darknet_yolo_v4_pre/yolov4-tiny.weights"
 cfg_url: "https://raw.githubusercontent.com/AlexeyAB/darknet/master/cfg/yolov4-tiny.cfg"
 backend: 3 # cv::dnn::DNN_BACKEND_OPENCV
