--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -48,11 +48,10 @@ jobs:
       - name: Source setup and build then test using colcon
         env:
           LD_LIBRARY_PATH: /usr/local/lib/
-          CMAKE_CXX_STANDARD: 14
         run: |
           source /opt/ros/foxy/setup.bash
           source /usr/share/gazebo/setup.sh
-          colcon build
+          colcon build --cmake-args -DCMAKE_CXX_STANDARD=14
           source ./install/setup.bash
           colcon test
           colcon test-result --verbose
