--- a/src/triton_pid_controller/CMakeLists.txt
+++ b/src/triton_pid_controller/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(triton_interfaces)
+project(triton_pid_controller)
 
 # Default to C99
 if(NOT CMAKE_C_STANDARD)
@@ -17,35 +17,38 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(sensor_msgs REQUIRED)
+find_package(std_msgs REQUIRED)
+find_package(yaml-cpp REQUIRED)
+find_package(triton_interfaces REQUIRED)
+include_directories("include"
+   ${YAML_CPP_INCLUDE_DIRS})
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
+#target_link_libraries(triton_pid_controller ${YAML_CPP_LIBRARIES})
+add_executable(triton_pid_controller src/triton_pid_controller.cpp)
 
-find_package(rosidl_default_generators REQUIRED)
-find_package(std_msgs REQUIRED)
-find_package(sensor_msgs REQUIRED)
+target_link_libraries(triton_pid_controller ${YAML_CPP_LIBRARIES})
+target_include_directories(triton_pid_controller PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  $<INSTALL_INTERFACE:include>)
 
-rosidl_generate_interfaces(${PROJECT_NAME}
-  "action/RunPipeline.action"
-  "srv/ConfigurePipeline.srv"
-  "msg/PipelineType.msg"
-  "msg/PipelineFeedback.msg"
-  "msg/DetectionBox.msg"
-  "msg/DetectionBoxArray.msg"
-  "srv/ObjectDetection.srv"
-  "msg/Float.msg"
-  DEPENDENCIES builtin_interfaces std_msgs sensor_msgs
-)
+install(TARGETS triton_pid_controller
+  DESTINATION lib/${PROJECT_NAME})
+
+ament_target_dependencies(triton_pid_controller rclcpp sensor_msgs  std_msgs triton_interfaces)
 
 if(BUILD_TESTING)
-  #find_package(ament_lint_auto REQUIRED)
+  find_package(ament_lint_auto REQUIRED)
   # the following line skips the linter which checks for copyrights
   # uncomment the line when a copyright and license is not present in all source files
   #set(ament_cmake_copyright_FOUND TRUE)
   # the following line skips cpplint (only works in a git repo)
   # uncomment the line when this package is not in a git repo
   #set(ament_cmake_cpplint_FOUND TRUE)
-  #ament_lint_auto_find_test_dependencies()
+  ament_lint_auto_find_test_dependencies()
 endif()
 
 ament_package()
