--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -51,7 +51,7 @@ jobs:
         run: |
           source /opt/ros/foxy/setup.bash
           source /usr/share/gazebo/setup.sh
-          colcon build
+          colcon build --cmake-args -DCMAKE_CXX_STANDARD=14
           source ./install/setup.bash
           colcon test
           colcon test-result --verbose
