--- a/src/triton_gazebo/config/yolov4-custom-3l.cfg
+++ b/src/triton_gazebo/config/yolov4-custom-3l.cfg
@@ -5,8 +5,8 @@
 # Training
 batch=64
 subdivisions=16
-width=416
-height=416
+width=608
+height=608
 channels=3
 momentum=0.9
 decay=0.0005
@@ -28,13 +28,6 @@ blur=1
 mosaic=1
 mixup=1 
 cutmix=0
-
-#weights_reject_freq=1001
-#ema_alpha=0.9998
-#equidistant_point=1000
-#num_sigmas_reject_badlabels=3
-#badlabels_rejection_percentage=0.2
-
 
 [convolutional]
 batch_normalize=1
@@ -229,10 +222,10 @@ activation=linear
 
 
 [yolo]
-mask = 3,4,5
-anchors = 10,14,  23,27,  37,58,  81,82,  135,169,  344,319
+mask = 6,7,8
+anchors = 12, 16, 19, 36, 40, 28, 36, 75, 76, 55, 72, 146, 142, 110, 192, 243, 459, 401
 classes=8
-num=6
+num=9
 jitter=.3
 scale_x_y = 1.05
 cls_normalizer=1.0
@@ -244,8 +237,6 @@ random=1
 resize=1.5
 nms_kind=greedynms
 beta_nms=0.6
-#new_coords=1
-#scale_x_y = 2.0
 
 [route]
 layers = -4
@@ -280,10 +271,10 @@ filters=39
 activation=linear
 
 [yolo]
-mask = 1,2,3
-anchors = 10,14,  23,27,  37,58,  81,82,  135,169,  344,319
+mask = 3,4,5
+anchors = 12, 16, 19, 36, 40, 28, 36, 75, 76, 55, 72, 146, 142, 110, 192, 243, 459, 401
 classes=8
-num=6
+num=9
 jitter=.3
 scale_x_y = 1.05
 cls_normalizer=1.0
@@ -295,5 +286,53 @@ random=1
 resize=1.5
 nms_kind=greedynms
 beta_nms=0.6
-#new_coords=1
-#scale_x_y = 2.0
+
+
+[route]
+layers = -3
+
+[convolutional]
+batch_normalize=1
+filters=64
+size=1
+stride=1
+pad=1
+activation=leaky
+
+[upsample]
+stride=2
+
+[route]
+layers = -1, 15
+
+[convolutional]
+batch_normalize=1
+filters=128
+size=3
+stride=1
+pad=1
+activation=leaky
+
+[convolutional]
+size=1
+stride=1
+pad=1
+filters=39
+activation=linear
+
+[yolo]
+mask = 0,1,2
+anchors = 12, 16, 19, 36, 40, 28, 36, 75, 76, 55, 72, 146, 142, 110, 192, 243, 459, 401
+classes=8
+num=9
+jitter=.3
+scale_x_y = 1.05
+cls_normalizer=1.0
+iou_normalizer=0.07
+iou_loss=ciou
+ignore_thresh = .7
+truth_thresh = 1
+random=1
+resize=1.5
+nms_kind=greedynms
+beta_nms=0.6
