--- a/src/triton_interfaces/package.xml
+++ b/src/triton_interfaces/package.xml
@@ -14,6 +14,7 @@
 
   <depend>action_msgs</depend>
   <depend>std_msgs</depend>
+  <depend>geometry_msgs</depend>
   <buildtool_depend>rosidl_default_generators</buildtool_depend>
   <exec_depend>rosidl_default_runtime</exec_depend>
   <member_of_group>rosidl_interface_packages</member_of_group>
