--- a/src/triton_bringup/setup.cfg
+++ b/src/triton_bringup/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/triton_bringup
+script_dir=$base/lib/triton_bringup
 [install]
-install-scripts=$base/lib/triton_bringup
+install_scripts=$base/lib/triton_bringup
