--- a/src/triton_pipeline/setup.cfg
+++ b/src/triton_pipeline/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/triton_pipeline
+script_dir=$base/lib/triton_pipeline
 [install]
-install-scripts=$base/lib/triton_pipeline
+install_scripts=$base/lib/triton_pipeline
