--- a/src/triton_teleop/setup.cfg
+++ b/src/triton_teleop/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/triton_teleop
+script_dir=$base/lib/triton_teleop
 [install]
-install-scripts=$base/lib/triton_teleop
+install_scripts=$base/lib/triton_teleop
