--- a/src/triton_pid_controller/CMakeLists.txt
+++ b/src/triton_pid_controller/CMakeLists.txt
@@ -27,6 +27,11 @@ find_package(yaml-cpp REQUIRED)
 find_package(triton_interfaces REQUIRED)
 include_directories("include"
    ${YAML_CPP_INCLUDE_DIRS})
+if(NOT yaml-cpp_FOUND)
+  find_package(PkgConfig REQUIRED)
+  pkg_check_modules(YAML_CPP REQUIRED yaml-cpp)
+  include_directories("include" ${YAML_CPP_INCLUDEDIR})
+endif()
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
