--- a/src/triton_pid_controller/CMakeLists.txt
+++ b/src/triton_pid_controller/CMakeLists.txt
@@ -23,15 +23,13 @@ find_package(rclcpp REQUIRED)
 find_package(rclcpp_components REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(std_msgs REQUIRED)
-find_package(yaml-cpp REQUIRED)
+# find_package(yaml-cpp REQUIRED)
 find_package(triton_interfaces REQUIRED)
-include_directories("include"
-   ${YAML_CPP_INCLUDE_DIRS})
-if(NOT yaml-cpp_FOUND)
-  find_package(PkgConfig REQUIRED)
-  pkg_check_modules(YAML_CPP REQUIRED yaml-cpp)
-  include_directories("include" ${YAML_CPP_INCLUDEDIR})
-endif()
+#include_directories("include"
+#   ${YAML_CPP_INCLUDE_DIRS})
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(YAML_CPP REQUIRED yaml-cpp)
+include_directories("include" ${YAML_CPP_INCLUDEDIR})
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
