--- a/src/triton_pid_controller/CMakeLists.txt
+++ b/src/triton_pid_controller/CMakeLists.txt
@@ -15,8 +15,6 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
-set(yaml-cpp_DIR "/usr/share/cmake/yaml-cpp")
-
 # find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
@@ -25,11 +23,7 @@ find_package(sensor_msgs REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(yaml-cpp REQUIRED)
 find_package(triton_interfaces REQUIRED)
-include_directories("include"
-   ${YAML_CPP_INCLUDE_DIRS})
-# find_package(PkgConfig REQUIRED)
-# pkg_check_modules(YAML_CPP REQUIRED yaml-cpp)
-# include_directories("include" ${YAML_CPP_INCLUDEDIR})
+include_directories("include" ${YAML_CPP_INCLUDE_DIRS})
 
 include_directories(include ${catkin_INCLUDE_DIRS})
 
@@ -56,14 +50,14 @@ install(DIRECTORY
 )
 
 if(BUILD_TESTING)
-  find_package(ament_lint_auto REQUIRED)
+  # find_package(ament_lint_auto REQUIRED)
   # the following line skips the linter which checks for copyrights
   # uncomment the line when a copyright and license is not present in all source files
-  #set(ament_cmake_copyright_FOUND TRUE)
+  # set(ament_cmake_copyright_FOUND TRUE)
   # the following line skips cpplint (only works in a git repo)
   # uncomment the line when this package is not in a git repo
   #set(ament_cmake_cpplint_FOUND TRUE)
-  ament_lint_auto_find_test_dependencies()
+  # ament_lint_auto_find_test_dependencies()
 endif()
 
 ament_package()
