--- a/src/triton_controls/config/state_estimator_config_IMU_only.yaml
+++ b/src/triton_controls/config/state_estimator_config_IMU_only.yaml
@@ -71,8 +71,8 @@
 #         estimation node from robot_localization! However, that instance should *not* fuse the global data.
         map_frame: map              # Defaults to "map" if unspecified
         odom_frame: odom            # Defaults to "odom" if unspecified
-        base_link_frame: frame  # Defaults to "base_link" if unspecified
-        world_frame: map           # Defaults to the value of odom_frame if unspecified
+        base_link_frame: base_link  # Defaults to "base_link" if unspecified
+        world_frame: odom           # Defaults to the value of odom_frame if unspecified
 
 # The filter accepts an arbitrary number of inputs from each input message type (nav_msgs/Odometry,
 # geometry_msgs/PoseWithCovarianceStamped, geometry_msgs/TwistWithCovarianceStamped,
