--- a/src/triton_pipeline/config/camera1.yaml
+++ b/src/triton_pipeline/config/camera1.yaml
@@ -1,12 +1,14 @@
 /**:
     ros__parameters:
-      video_device: "/dev/video0"
+      video_device: "/dev/video1"
       framerate: 30.0
       io_method: "mmap"
       frame_id: "camera1"
       pixel_format: "yuyv"
       color_format: "yuv422p"
-      image_width: 1280
-      image_height: 720
+      # image_width: 1280
+      # image_height: 720
+      image_width: 640
+      image_height: 360
       camera_name: "camera1"
       camera_info_url: "package://triton_pipeline/config/camera1_info.yaml"
