--- a/src/triton_pipeline/config/camera1_info.yaml
+++ b/src/triton_pipeline/config/camera1_info.yaml
@@ -1,5 +1,7 @@
-image_width: 1280
-image_height: 720
+# image_width: 1280
+# image_height: 720
+image_width: 640
+image_height: 360
 camera_name: camera1
 camera_matrix:
   rows: 3
