--- a/src/triton_pipeline/config/camera2.yaml
+++ b/src/triton_pipeline/config/camera2.yaml
@@ -1,12 +1,14 @@
 /**:
     ros__parameters:
-      video_device: "/dev/video1"
+      video_device: "/dev/video0"
       framerate: 30.0
       io_method: "mmap"
       frame_id: "camera2"
       pixel_format: "yuyv"
       color_format: "yuv422p"
-      image_width: 1024
-      image_height: 768
+      # image_width: 1024
+      # image_height: 768
+      image_width: 320
+      image_height: 240
       camera_name: "camera2"
       camera_info_url: "package://triton_pipeline/config/camera2_info.yaml"
