--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Install deps with rosdep
         run: |
-          rosdep update
+          rosdep update --include-eol
           rosdep install -i --from-path src --rosdistro foxy -y
           
       - name: Cache OpenCV
