--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -24,6 +24,14 @@ jobs:
         run: |
           rosdep update --include-eol
           rosdep install -i --from-path src --rosdistro foxy -y
+
+      - name: Uninstall em package
+        run: |
+          pip uninstall em -y
+
+      - name: Install empy package
+        run: |
+          pip install empy -y
           
           
           
@@ -53,8 +61,6 @@ jobs:
         run: |
           source /opt/ros/foxy/setup.bash
           source /usr/share/gazebo/setup.sh
-          pip uninstall em
-          pip install empy #Dependency issue
           colcon build --cmake-args -DCMAKE_CXX_STANDARD=14
           source ./install/setup.bash
           colcon test
