--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Install empy package
         run: |
-          pip install empy -y
+          pip install empy
           
           
           
