--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -24,14 +24,6 @@ jobs:
         run: |
           rosdep update --include-eol
           rosdep install -i --from-path src --rosdistro foxy -y
-
-      - name: Uninstall em package
-        run: |
-          pip uninstall em -y
-
-      - name: Install empy package
-        run: |
-         pip install em
           
           
           
@@ -61,9 +53,9 @@ jobs:
         run: |
           source /opt/ros/foxy/setup.bash
           source /usr/share/gazebo/setup.sh
-          pip uninstall em -y
-          pip uninstall empy -y
-          pip install empy
+          sudo pip uninstall em -y
+          sudo pip uninstall empy -y
+          sudo pip install empy
 
           colcon build --cmake-args -DCMAKE_CXX_STANDARD=14
           source ./install/setup.bash
