Testing out .yaml

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -10,6 +10,8 @@ on:
 jobs:
   build_and_test:
     runs-on: ubuntu-20.04
+    container:
+      image: ./docker/testing/Dockerfile
     steps:
 
       - name: Check out ubc-subbots/triton
@@ -17,15 +19,15 @@ jobs:
 
       - name: Setup ROS2 distro and system deps
         uses: ros-tooling/setup-ros@v0.2
-        with: 
+        with:
           required-ros-distributions: foxy
 
       - name: Install deps with rosdep
         run: |
           rosdep update --include-eol
           rosdep install -i --from-path src --rosdistro foxy -y
-             
-          
+
+
       - name: Cache OpenCV
         id: opencv-cache
         uses: actions/cache@v2
@@ -35,17 +37,17 @@ jobs:
 
       - name: Install OpenCV
         uses: rayandrews/with-opencv-action@v1
-        with:  
+        with:
           dir: ./opencv-install
           cached: ${{ steps.opencv-cache.outputs.cache-hit }}
           opencv-version: '4.5.3'
-          CMAKE_BUILD_TYPE: RELEASE   
+          CMAKE_BUILD_TYPE: RELEASE
           ENABLE_PRECOMPILED_HEADERS: OFF
-          
+
       - name: Ignore with colcon build
         run: |
           touch ./opencv-install/COLCON_IGNORE
-          
+
       - name: Source setup and build then test using colcon
         env:
           LD_LIBRARY_PATH: /usr/local/lib/
@@ -53,13 +55,10 @@ jobs:
           source /opt/ros/foxy/setup.bash
           source /usr/share/gazebo/setup.sh
           pip uninstall em -y
-          
+
           pip install empy --user
 
           colcon build --cmake-args -DCMAKE_CXX_STANDARD=14
           source ./install/setup.bash
           colcon test
           colcon test-result --verbose
-
-
-
