Added rosdep init

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -18,6 +18,7 @@ jobs:
 
       - name: Install deps with rosdep
         run: |
+          rosdep init
           rosdep update --include-eol
           rosdep install -i --from-path src --rosdistro foxy -y
 
