fixing computer vision integration

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -23,7 +23,7 @@ jobs:
           sudo apt upgrade -y
 
       - name: Check out ubc-subbots/triton
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3  # Update to the latest version
 
       - name: Install deps with rosdep
         run: |
@@ -33,7 +33,7 @@ jobs:
 
       - name: Cache OpenCV
         id: opencv-cache
-        uses: actions/cache@v2
+        uses: actions/cache@v3  # Update to the latest version
         with:
           path: ./opencv-install
           key: ${{ runner.os }}-opencv-cache
@@ -62,4 +62,3 @@ jobs:
           source ./install/setup.bash
           colcon test
           colcon test-result --verbose
-
