--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -20,7 +20,19 @@ jobs:
       - name: Update and upgrade
         run: |    
           sudo apt update -y
-          sudo apt upgrade -y 
+          sudo apt upgrade -y
+
+      - name: Install CUDA
+        run: |
+          sudo apt-key adv --fetch-keys http://developer.download.nvidia.com/compute/cuda/repos/ubuntu2004/x86_64/7fa2af80.pub
+          sudo sh -c 'echo "deb http://developer.download.nvidia.com/compute/cuda/repos/ubuntu2004/x86_64 /" > /etc/apt/sources.list.d/cuda.list'
+          sudo apt-get update
+          sudo apt-get -y install cuda
+
+      - name: Set CUDA paths
+        run: |
+          echo "/usr/local/cuda/lib64" >> $GITHUB_PATH
+          echo "/usr/local/cuda/bin" >> $GITHUB_PATH
 
       - name: Check out ubc-subbots/triton
         uses: actions/checkout@v3  # Update to the latest version.
